# client_churn_prediction

./: .tool-versions  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
data/processed/: X_data.pkl  X_test.parquet  X_test.pkl  X_train.parquet  X_train.pkl  X_val.parquet  X_val.pkl  churn.parquet  df1.parquet  df2.pkl  id_train.pkl  id_val.pkl  ids_test.pkl  ids_train.pkl  ids_val.pkl  x_test.parquet  x_test.pkl  x_train.parquet  x_train.pkl  x_val.parquet  x_val.pkl  y_data.pkl  y_test.pkl  y_train.pkl  y_val.pkl
data/raw/: churn.csv:Zone.Identifier
data/sql/: ddl.sql
models/: model.cbm  model.pkl  threshold.pkl
notebooks/: api_test.ipynb  c1.ipynb  c2.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
reports/: gender_comparation.html  report_overview.html
src/: handler.py  main.py  topbank.db
src/churn_prediction/: TopBankChurnPrediction.py
src/data/: X_data.pkl  X_test.pkl  X_train.pkl  db.py  df1.pkl  df_raw.pkl  estimated_salary.pkl  id_test.pkl  make_dataset.py  y_data.pkl  y_train.pkl
src/features/: build_features.py  scalers.pkl
src/model/: predict_model.py  train_model.py
src/visualization/: visualize.py
streamlit/: app.py
