[tool.poetry]
name = "client-churn-prediction"
version = "0.1.0"
description = "Churn prediction"
authors = ["Gutto <guttolaudie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.3.1"
fastparquet = "^2023.8.0"
ipykernel = "^6.25.2"
seaborn = "^0.13.0"
ipython = "^8.16.1"
yellowbrick = "^1.5"
sweetviz = "^2.2.1"
tqdm = "^4.66.1"
scipy = "^1.11.3"
inflection = "^0.5.1"
boruta = "^0.3"
numpy = "^1.26.1"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
catboost = "^1.2.2"
kds = "^0.1.3"
optuna = "^3.4.0"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
