[tool.poetry]
name = "client-churn-prediction"
version = "0.1.0"
description = "ML product to predict churn"
authors = ["Gutto França <guttolaudie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.10"
lightgbm = "^4.1.0"
xgboost = "^2.0.2"
catboost = "^1.2.2"
inflection = "^0.5.1"
seaborn = "^0.13.0"
numpy = "^1.26.2"
pandas = "^2.1.4"
sweetviz = "^2.3.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
ipykernel = "^6.27.1"
ipython = "^8.18.1"
optuna = "^3.5.0"
yellowbrick = "^1.5"
scikit-learn = "^1.3.2"
duckdb = "^0.9.2"
streamlit = "^1.29.0"
plotly = "^5.18.0"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
duckdb-engine = "^0.9.4"
watchdog = "^3.0.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
